--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LabTest Pro | Booking System</title>
+    <title>My Lab Buddy (MLB) | Booking System</title>
     <style>
         :root {
             --primary: #2563eb;
