--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 name: document.getElementById('patientName').value,
                 test: document.getElementById('labTest').value,
                 timestamp: new Date().toLocaleString(),
-                bookingId: 'BK-' + Math.random().toString(36).substr(2, 9).toUpperCase(),
+                bookingId: 'MLB' + Math.random().toString(36).substr(2, 9).toUpperCase(),
                 phone: document.getElementById('phone').value
             };
 
